--- a/app/pages/search/search-types.pug
+++ b/app/pages/search/search-types.pug
@@ -7,6 +7,7 @@ block bodyClasses
   - var bodyCls = 'is-search-by-offer-type';
 
 block header
+  - var isNoFooter = true
   - var headerClass = ' is-login'
   - var pageClass = ''
   - var isMap = true
