--- a/app/pages/signup/nd-signup-confirm.pug
+++ b/app/pages/signup/nd-signup-confirm.pug
@@ -4,7 +4,8 @@ block head
   - var pageTitle = 'Spacepool - Sign Up - Email Confirmed'
 
 block header
-  - var headerClass = ' nd-header_border'
+  - var isNoFooter = true
+  - var headerClass = ''
   - var pageClass = ''
   - var isMap = false
   - var host = false
