--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -4,7 +4,7 @@ block head
   - var pageTitle = 'Spacepool - Space'
 
 block header
-  - var headerClass = ' is-login nd-header_border'
+  - var headerClass = ' is-login'
   - var pageClass = ''
   - var isMap = true
   - var host = true
