--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -219,6 +219,7 @@ $nd-color-blue: #1173ce;
 // Transitions
 // ##########
 $ease-main: .3s ease;
+$ease-main-2s: .2s ease;
 $ease-main-short: .15s ease;
 
 // ##########
