--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -18,7 +18,7 @@
     bottom: 9px;
     left: 0;
     color: $color-placeholder;
-    transition: transform $ease-main, color $ease-main, font $ease-main;
+    transition: transform $ease-main-2s, color $ease-main-2s, font $ease-main-2s;
     z-index: 2;
     pointer-events: none;
 
@@ -381,7 +381,7 @@
         bottom: 0;
         left: 7px;
         box-sizing: border-box;
-        transition: transform $ease-main, color $ease-main, font $ease-main, background $ease-main, padding $ease-main, opacity $ease-main;
+        transition: transform $ease-main-2s, color $ease-main-2s, font $ease-main-2s, background $ease-main-2s, padding $ease-main-2s, opacity $ease-main-2s;
         z-index: 1;
         transform: translate3d(0, 0, 0);
 
