--- a/app/pages/login/login.pug
+++ b/app/pages/login/login.pug
@@ -4,7 +4,8 @@ block head
   - var pageTitle = 'Spacepool - Log In'
 
 block header
-  - var headerClass = ' nd-header_border'
+  - var isNoFooter = true
+  - var headerClass = ''
   - var pageClass = ''
   - var isMap = false
   - var host = false
