--- a/app/pages/search/search.pug
+++ b/app/pages/search/search.pug
@@ -7,6 +7,7 @@ block bodyClasses
   - var bodyCls = '';
 
 block header
+  - var isNoFooter = true
   - var headerClass = ' is-login'
   - var pageClass = ''
   - var isMap = true
