last fixes for design

--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -424,25 +424,27 @@
     display: block;
     box-sizing: border-box;
     width: 100%;
-    font-size: 18px;
-    line-height: 1.45;
+    font-size: 17px;
+    line-height: 1.63;
+    letter-spacing: -.02em;
     font-weight: 400;
 
     @include screen('xlg', max, 2) {
-      font-size: pxtovw(18, 1660);
+      font-size: pxtovw(17, 1660);
     }
 
     @include screen('lg', max, 2) {
-      font-size: pxtovw(18, 1366);
+      line-height: 1.7;
+      font-size: pxtovw(17, 1366);
     }
 
     @include screen('md', max, 2) {
-      font-size: pxtovw(18, 960);
+      font-size: pxtovw(17, 960);
     }
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(15, 375);
-      line-height: 1.74;
+      line-height: 1.63;
     }
   }
 
