--- a/app/components/filter-menu/filter-menu.scss
+++ b/app/components/filter-menu/filter-menu.scss
@@ -82,6 +82,10 @@
         @include screen('sm', max, 2) {
           display: none;
         }
+
+        .is-search-map-active & {
+          display: none;
+        }
       }
 
       &:not(:last-child) {
