--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -37,32 +37,32 @@ block content
 
         +nd-section._mt114
           +nd-section-header
-            +nd-section-title._fz30 Location
+            +nd-section-title Location
             +e.text 229 Shoreditch High St, Shoreditch, London E1 6PJ, UK, London, E1 6PJ
           +map._space#spaceMap.__map
           +routes.__routes
 
         +nd-section._mt114
           +nd-section-header
-            +nd-section-title._fz30 Facilities
+            +nd-section-title Facilities
             +facility-list.__facility
 
         +nd-section._mt130
           +nd-section-header
-            +nd-section-title._fz30 Hot desks
+            +nd-section-title Hot desks
           +e.offers
             each item in getData('nd-offers.json').hot
               +offer-card-for-space(item, 'nd-section__offer')
         +nd-section._mt80
           +nd-section-header
-            +nd-section-title._fz30 Fixed desks
+            +nd-section-title Fixed desks
           +e.offers
             each item in getData('nd-offers.json').fixed
               +offer-card-for-space(item, ' nd-section__offer')
 
         +nd-section._mt80
           +nd-section-header
-            +nd-section-title._fz30 Private offices
+            +nd-section-title Private offices
           +e.offers
             each item in getData('nd-offers.json').private
               +offer-card-for-space(item, 'nd-section__offer')
@@ -74,7 +74,7 @@ block content
       +e.column_footer
         +nd-section
           +nd-section-header
-            +nd-section-title._fz30 More places
+            +nd-section-title More places
           +nd-slider(false, false, true).__slider_spaces.js-nd-double-space-slider
             each item in getData('nd-spaces-search-around.json')
               +nd-space()._card.__slide_card.swiper-slide
