--- a/app/components/registration-form/registration-form.scss
+++ b/app/components/registration-form/registration-form.scss
@@ -27,6 +27,26 @@
     max-width: none;
   }
 
+  .is-nofooter & {
+    padding-bottom: 122px;
+
+    @include screen('xlg', max, 2) {
+      padding-bottom: pxtovw(122, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-bottom: pxtovw(90, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-bottom: pxtovw(135, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding-bottom: pxtovw(83, 375);
+    }
+  }
+
   .nd-form {
     &__header {
       display: flex;
