--- a/app/pages/login/login.pug
+++ b/app/pages/login/login.pug
@@ -3,8 +3,10 @@ extends ../../layouts/redesign-default
 block head
   - var pageTitle = 'Spacepool - Log In'
 
-block header
+block bodyClasses
   - var isNoFooter = true
+
+block header
   - var headerClass = ''
   - var pageClass = ''
   - var isMap = false
