--- a/app/pages/signup/nd-signup-confirm.pug
+++ b/app/pages/signup/nd-signup-confirm.pug
@@ -3,8 +3,10 @@ extends ../../layouts/redesign-default
 block head
   - var pageTitle = 'Spacepool - Sign Up - Email Confirmed'
 
-block header
+block bodyClasses
   - var isNoFooter = true
+
+block header
   - var headerClass = ''
   - var pageClass = ''
   - var isMap = false
