deal pass prepages

--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -64,4 +64,34 @@
       height: pxtovw(26, 375);
     }
   }
+
+  &_sz34 {
+    min-width: 34px;
+    width: 34px;
+    height: 34px;
+
+    @include screen('xlg', max, 2) {
+      min-width: pxtovw(34, 1660);
+      width: pxtovw(34, 1660);
+      height: pxtovw(34, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      min-width: pxtovw(34, 1366);
+      width: pxtovw(34, 1366);
+      height: pxtovw(34, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      min-width: pxtovw(34, 960);
+      width: pxtovw(34, 960);
+      height: pxtovw(34, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      min-width: pxtovw(34, 375);
+      width: pxtovw(34, 375);
+      height: pxtovw(34, 375);
+    }
+  }
 }
