--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -62,4 +62,10 @@
       padding-top: 0;
     }
   }
+
+  .is-sm-noheader & {
+    @include screen('sm', max, 2) {
+      padding-top: 0;
+    }
+  }
 }
