--- a/app/blocks/space-type/space-type.scss
+++ b/app/blocks/space-type/space-type.scss
@@ -169,4 +169,25 @@
       line-height: (15 / 12);
     }
   }
+
+  &_fz11 {
+    font-size: 11px;
+    line-height: (13 / 11);
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(11, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(11, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(11, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(11, 375);
+    }
+  }
 }
