--- a/app/blocks/table/table.pug
+++ b/app/blocks/table/table.pug
@@ -1,3 +1,7 @@
 mixin table()
   table.table&attributes(attributes)(cellspacing="0", class=addclass)
     block
+
+mixin nd-table()
+  +b.TABLE.nd-table&attributes(attributes)(cellspacing="0")
+    block
