--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -415,6 +415,12 @@
     }
   }
 
+  .is-sm-noheader & {
+    @include screen('sm', max, 2) {
+      display: none;
+    }
+  }
+
   &_special {
     #{$b} {
       &__logo {
