--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -12,6 +12,7 @@ include ../blocks/avatar/avatar
 include ../blocks/block-check/block-check
 include ../blocks/blog-news/blog-news
 include ../blocks/blog/blog
+include ../blocks/board/board
 include ../blocks/box/box
 include ../blocks/boxes/boxes
 include ../blocks/breadcrumbs-form/breadcrumbs-form
@@ -120,6 +121,7 @@ include ../blocks/pagination/pagination
 include ../blocks/panel/panel
 include ../blocks/party/party
 include ../blocks/payment-card/payment-card
+include ../blocks/person/person
 include ../blocks/photo-preview/photo-preview
 include ../blocks/places/places
 include ../blocks/popups/popups
@@ -148,6 +150,7 @@ include ../blocks/side-image/side-image
 include ../blocks/sidebar/sidebar
 include ../blocks/sign-input/sign-input
 include ../blocks/signatures/signatures
+include ../blocks/slider-navigation/slider-navigation
 include ../blocks/slider/nd-slider
 include ../blocks/slider/slider
 include ../blocks/slogan/slogan
@@ -195,6 +198,7 @@ include ../components/condition-search/condition-search
 include ../components/content/content
 include ../components/content/nd-content
 include ../components/conversation/conversation
+include ../components/dashboard/dashboard
 include ../components/document/document
 include ../components/facilities/facilities
 include ../components/filter-menu/filter-menu
@@ -208,6 +212,7 @@ include ../components/lead/lead
 include ../components/location/location
 include ../components/main-lead/main-lead
 include ../components/main-menu/main-menu
+include ../components/messenger/messenger
 include ../components/offer-card/offer-card
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
