--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -175,6 +175,31 @@
     background-color: $nd-color-daypass;
   }
 
+  &_size8 {
+    width: 8px;
+    height: 8px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(8, 1660);
+      height: pxtovw(8, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(8, 1366);
+      height: pxtovw(8, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(8, 960);
+      height: pxtovw(8, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(8, 375);
+      height: pxtovw(8, 375);
+    }
+  }
+
   &_size10 {
     width: 10px;
     height: 10px;
