--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -101,6 +101,26 @@
       @include screen('sm', max, 2) {
         margin-top: pxtovw(13, 375);
       }
+
+      #{$b}_side-nav & {
+        margin-top: 20px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(20, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(27, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(21, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(15, 375);
+        }
+      }
     }
   }
 
@@ -134,6 +154,23 @@
       border-radius: 0;
     }
 
+    #{$b}_side-nav & {
+      padding-top: 50.5%;
+      border-radius: 0;
+
+      @include screen('lg', max, 2) {
+        padding-top: 61.8%;
+      }
+    }
+
+    #{$b}_side-nav_view & {
+      padding-top: 63.3%;
+
+      @include screen('lg', max, 2) {
+        padding-top: 58.5%;
+      }
+    }
+
     img {
       display: block;
       font-size: 0;
@@ -156,6 +193,10 @@
 
       @include screen('sm', max, 2) {
         border-radius: pxtovw(3, 375);
+      }
+
+      #{$b}_side-nav & {
+        border-radius: 0;
       }
     }
   }
@@ -211,6 +252,26 @@
 
       @include screen('sm', max, 2) {
         margin-top: pxtovw(13, 375);
+      }
+
+      #{$b}_side-nav & {
+        margin-top: 10px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(10, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(10, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(10, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(10, 375);
+        }
       }
     }
   }
@@ -546,6 +607,48 @@
         @include screen('sm', max, 2) {
           margin-left: pxtovw(9, 375);
         }
+      }
+    }
+
+    #{$b}_side-nav & {
+      font-size: 22px;
+      line-height: 1.1;
+      font-weight: 400;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(22, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(18, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(22, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(20, 375);
+      }
+    }
+
+    #{$b}_side-nav_view & {
+      font-size: 20px;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(20, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(20, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(20, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(20, 375);
       }
     }
   }
@@ -921,6 +1024,26 @@
 
     @include screen('sm', max, 2) {
       padding: pxtovw(15, 375) pxtovw(17, 375) 0;
+    }
+
+    #{$b}_side-nav & {
+      padding: 0 30px;
+
+      @include screen('xlg', max, 2) {
+        padding: 0 pxtovw(30, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        padding: 0 pxtovw(30, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding: 0 pxtovw(30, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding: 0 pxtovw(30, 375);
+      }
     }
   }
 
